Linking of js file to index file

--- a/project1.html
+++ b/project1.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+
   <style>
     body {
       padding: 0;
@@ -190,41 +191,41 @@
     <div class="block">
       <div class="columns">
         <div class="column is-8">
-        <div class="container has-background-white">
-          <div class="recipe">
-            <h3><strong>Mexican Martini</strong></h3>
-            <br>
-            <p><strong>INGREDIENTS</strong></p>
-            <p class="ingredients">Tequila: 1oz</p>
-            <p>Triple Sec 1oz</p>
-            <p>Tequila: 1oz</p>
-            <p>Sprite: 1oz</p>
-            <p>Orange Juice 1oz</p>
-            <p>Olive Juice 0.5oz</p>
-            <p>Lime juice 0.5oz</p>
-            <p>
+          <div class="container has-background-white">
+            <div class="recipe">
+              <h3><strong>Mexican Martini</strong></h3>
+              <br>
+              <p><strong>INGREDIENTS</strong></p>
+              <p class="ingredients">Tequila: 1oz</p>
+              <p>Triple Sec 1oz</p>
+              <p>Tequila: 1oz</p>
+              <p>Sprite: 1oz</p>
+              <p>Orange Juice 1oz</p>
+              <p>Olive Juice 0.5oz</p>
+              <p>Lime juice 0.5oz</p>
+              <p>
 
-            </p>
-            <br>
-            <p><strong>DIRECTIONS</strong></p>
-            <p>1. Fill shaker with ice </p>
-            <p>2. Fill shake with ingredients</p>
-            <p>3. Shake the shaker vigorously to mix ingredients</p>
-            <p>4. Pour drink into martini glass, use strainer to keep ice out of glass</p>
-            <p>5. Garnish with 3 olives on a toothpick</p>
+              </p>
+              <br>
+              <p><strong>DIRECTIONS</strong></p>
+              <p>1. Fill shaker with ice </p>
+              <p>2. Fill shake with ingredients</p>
+              <p>3. Shake the shaker vigorously to mix ingredients</p>
+              <p>4. Pour drink into martini glass, use strainer to keep ice out of glass</p>
+              <p>5. Garnish with 3 olives on a toothpick</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="column is-2">
-        <figure>
-          <img src="assests/mexican martini.jpg" width="200px" height="250px" alt="Mexican Martini">
-        </figure>
-      </div>
-  
-  </div>
-  </div>
-  </section>
+        <div class="column is-2">
+          <figure>
+            <img src="assests/mexican martini.jpg" width="200px" height="250px" alt="Mexican Martini">
+          </figure>
+        </div>
 
+      </div>
+    </div>
+  </section>
+  <script src="script4E.js"></script>
 </body>
 
 </html>
