--- a/project1.html
+++ b/project1.html
@@ -9,145 +9,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-  
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .notification {
-      font-size: 24px;
-      text-align: center;
-      width: 500px;
-      max-width: 100%;
-      margin: 0 auto;
-      bottom: 120px;
-      box-shadow: 0 0 5px 2px;
-    }
-
-    .control {
-      max-width: 100%;
-      padding: 20px;
-      margin-left: 60px;
-    }
-
-    #cocktails {
-      background: url("assests/1976957.jpg") center / cover;
-    }
-
-    #options {
-      width: 200px;
-      max-width: 100%;
-    }
-
-    .img1 {
-      margin-left: 50px;
-    }
-   
-    .img2 {
-      margin-left: 100px;
-      margin-bottom: 50px;
-    }
-
-    button {
-      background: none;
-      border: none;
-      outline: none;
-    }
-    .control {
-      padding: 5px;
-      margin-left: 20px;
-    }
-
-    #solid {
-      background-color: black;
-    }
-
-    #image2 {
-      background: url("assests/8.jpg") center / cover;
-    }
-
-    .container {
-      background-color: white;
-      border-radius: 5px;
-      box-shadow: 0 0 5px 2px;
-      width: 600px;
-      max-width: 100%;
-      margin-top: 50px;
-      margin-bottom: 100px;
-    }
-
-    #menu {
-      background-color: white;
-      text-align: center;
-      font-size: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 5px 2px;
-      width: 600px;
-      max-width: 100%;
-      margin-top: 150px;
-      margin-bottom: 200px;
-      padding: 10px;
-    }
-
-    h3 {
-      font-size: 30px;
-      text-align: center;
-      margin-bottom: 5px;
-    }
-
-    p {
-      text-align: justify;
-      margin: 0 25px;
-    }
-
-    figure {
-      margin-top: 180px;
-      border-radius: 2px;
-      bottom: 100px;
-
-    }
-
-    footer {
-      height: 80px;
-      width: 600px;
-      margin: 0 auto;
-      margin-top: 10px;
-    }
-
-    .glow {
-      font-size: 80px;
-      color: #eee;
-      text-align: center;
-      -webkit-animation: glow 1s ease-in-out infinite alternate;
-      -moz-animation: glow 1s ease-in-out infinite alternate;
-      animation: glow 1s ease-in-out infinite alternate;
-    }
-
-    @-webkit-keyframes glow {
-      from {
-        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px red, 0 0 40p red, 0 0 50px red, 0 0 60p red, 0 0 70p red;
-      }
-
-      to {
-        text-shadow: 0 0 20px #fff, 0 0 30px tomato, 0 0 40px tomato, 0 0 50px tomato, 0 0 60px tomato, 0 0 70px tomato, 0 0 80px tomato;
-      }
-    }
-    #tooltip {
-    background-color: #333;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 4px;
-    font-size: 13px;
-  }
-
- 
-  </style>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -222,13 +85,14 @@
           </div>
         </div>
         <div class="column is-3">
-         <figure>
-            <button><img class="img1" src="assests/cropped_bottle.jpg" width="100px" height="125px" alt="Liquor Bottle"></button>
+          <figure>
+            <button><img class="img1" src="assests/cropped_bottle.jpg" width="100px" height="125px"
+                alt="Liquor Bottle"></button>
           </figure>
         </div>
         <div class="column is-3">
           <figure>
-           <img class="img2" src="assests/mixer_bottle.jpg" width="90px" height="80px" alt="Mixer Bottle" />
+            <img class="img2" src="assests/mixer_bottle.jpg" width="90px" height="80px" alt="Mixer Bottle" />
           </figure>
 
         </div>
@@ -263,7 +127,8 @@
     <section>
       <div class="container has-background-white" id="menu">
         <h3 class="drink-title"><strong>Pick Your Poison</strong></h3>
-        <ul>
+        <ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+          
           <li>Mexican Martini</li>
           <li>Margarita</li>
           <li>Tequila Sunrise</li>
