Removal of remaining css for pictures, added ids for page 2

--- a/project1.html
+++ b/project1.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-  <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1st~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+  <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1st page styling ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <!-- To make this section disappear with Bulma use:   is-invisible     -->
-  <!-- <section class="hero is-fullheight" id="cocktails">
+  <!--  <section class="hero is-fullheight" id="cocktails">
     <header class="hero-body">
       <div class="is-overlay has-text-centered">
         <h1 class="glow">Casa Cocktails</h1>
@@ -26,7 +26,7 @@
     <div class="notification">
       <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID</h2>
       <p class="one">Must be 21 to enter site</p>
-      <p class="two">Please Enter Date of Birth</p>
+      <p class="one">Please Enter Date of Birth</p>
 
       <div class="control">
         <div class="select">
@@ -53,7 +53,8 @@
       </div>
     </div>
     <div class="has-text-centered">
-      <a href="https://www.freepik.com/free-photos-vectors/Background">Background vector created by freepik - www.freepik.com</a> 
+      <a href="https://www.freepik.com/free-photos-vectors/Background">Background vector created by freepik -
+        www.freepik.com</a>
 
     </div>
   </section> -->
@@ -67,8 +68,8 @@
     <div class="block">
       <div class="columns">
         <div class="column is-3">
-          <div class="container has-background-white" id="options">
-            <div class="control">
+          <div class="container has-background-white" id="options1">
+            <div class="control" id="liquor-list">
               <label class="checkbox"> Tequila
                 <input type="checkbox">
               </label>
@@ -86,19 +87,18 @@
         </div>
         <div class="column is-3">
           <figure>
-            <button><img class="img1" src="assests/cropped_bottle.jpg" width="100px" height="125px"
-                alt="Liquor Bottle"></button>
+            <button class="liquor"><img class="img1" src="assests/cropped_bottle.jpg" alt="Liquor Bottle"></button>
           </figure>
         </div>
         <div class="column is-3">
           <figure>
-            <img class="img2" src="assests/mixer_bottle.jpg" width="90px" height="80px" alt="Mixer Bottle" />
+            <button class="mixer"><img class="img2" src="assests/mixer_bottle.jpg" alt="Mixer Bottle" /></button>
           </figure>
 
         </div>
         <div class="column is 3">
-          <div class="container has-background-white" id="options">
-            <div class="control">
+          <div class="container has-background-white" id="options2">
+            <div class="control" id="mixer-list">
               <label class="checkbox"> Sprite
                 <input type="checkbox">
               </label>
@@ -136,7 +136,7 @@
 
       </div>
     </section> -->
-  <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~4th page Display drink recipe~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+  <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~4th page Display drink recipes~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
   <!--  <section class="hero is-fullheight" id="image2">
     <header>
