--- a/project1.html
+++ b/project1.html
@@ -16,7 +16,7 @@
 <body>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1st page styling ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <!-- To make this section disappear with Bulma use:   is-invisible     -->
-  <!--  <section class="hero is-fullheight" id="cocktails">
+   <!-- <section class="hero is-fullheight" id="cocktails">
     <header class="hero-body">
       <div class="is-overlay has-text-centered">
         <h1 class="glow">Casa Cocktails</h1>
@@ -59,16 +59,19 @@
     </div>
   </section> -->
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2nd page user picks options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-  <section class="hero is-fullheight" id="image2">
+   <!-- <section class="hero is-fullheight" id="image2">
     <header>
       <div class=" has-text-centered">
         <h1 class="glow" id="cocktail">What's on your shelf?</h1>
       </div>
     </header>
     <div class="block">
+      </>
+    </div>
+    <div class="block">
       <div class="columns">
         <div class="column is-3">
-          <div class="container has-background-white" id="options1">
+          <div class="container" id="options1">
             <div class="control" id="liquor-list">
               <label class="checkbox"> Tequila
                 <input type="checkbox">
@@ -97,7 +100,7 @@
 
         </div>
         <div class="column is 3">
-          <div class="container has-background-white" id="options2">
+          <div class="container" id="options2">
             <div class="control" id="mixer-list">
               <label class="checkbox"> Sprite
                 <input type="checkbox">
@@ -116,7 +119,7 @@
         </div>
       </div>
   </section>
-
+  <p class="has-text-centered">background by yingyang</p> -->
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~3rd page display drink options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <!--  <section class="hero is-fullheight" id="solid">
 
@@ -125,7 +128,7 @@
     </div>
 
     <section>
-      <div class="container has-background-white" id="menu">
+      <div class="container" id="menu">
         <h3 class="drink-title"><strong>Pick Your Poison</strong></h3>
         <ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
           
@@ -137,52 +140,38 @@
       </div>
     </section> -->
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~4th page Display drink recipes~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
-  <!--  <section class="hero is-fullheight" id="image2">
+  <section class="hero is-fullheight" id="image2">
     <header>
       <div class=" has-text-centered">
         <h1 class="glow" id="cocktail">Cocktail Recipe</h1>
       </div>
     </header>
-    <div class="block">
-      <div class="columns">
-        <div class="column is-8">
-          <div class="container has-background-white">
-            <div class="recipe">
-              <h3><strong>Mexican Martini</strong></h3>
-              <br>
-              <p><strong>INGREDIENTS</strong></p>
-              <p class="ingredients">Tequila: 1oz</p>
-              <p>Triple Sec 1oz</p>
-              <p>Tequila: 1oz</p>
-              <p>Sprite: 1oz</p>
-              <p>Orange Juice 1oz</p>
-              <p>Olive Juice 0.5oz</p>
-              <p>Lime juice 0.5oz</p>
-              <p>
-
-              </p>
-              <br>
-              <p><strong>DIRECTIONS</strong></p>
-              <p>1. Fill shaker with ice </p>
-              <p>2. Fill shake with ingredients</p>
-              <p>3. Shake the shaker vigorously to mix ingredients</p>
-              <p>4. Pour drink into martini glass, use strainer to keep ice out of glass</p>
-              <p>5. Garnish with 3 olives on a toothpick</p>
-            </div>
-          </div>
-        </div>
-        <div class="column is-2">
-          <figure>
-            <img src="assests/mexican martini.jpg" width="200px" height="250px" alt="Mexican Martini">
-          </figure>
-        </div>
-
+  <div class="tile is-ancestor">
+    <div class="tile is-4 is-vertical is-parent">
+      <div class="tile is-child box has-background-dark">
+       <figure>
+         <img class="drink-img" src="assests/mexican martini.jpg" alt="drink image">
+       </figure>
+        
+      </div>
+      <div class="tile is-child box">
+        <h5>Random Fact:</h5>
+        <p>Did you know that the man who invented the pringles can was cremated and a portion of himself was buried in a pringles can.</p>
       </div>
     </div>
-  </section>
+    <div class="tile is-parent" id="recipe">
+      <div class="tile is-child box">
+        <h3>Mexican Martini</h3>
+        <h4>Ingredients:</h4>
+        <p>Tequila</p>
+        <p>Triple Sec</p>
+        <h4>Directions:</h4>
+        <p>1. Put ice in shaker</p>
+      </div>
+    </div>
+  </div>
   <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
-  <script src="script4E.js"></script> -->
+  <script src="script4E.js"></script>
 </body>
 
 </html>
