Removed hardcoded joke heading and paragraph

--- a/project1.html
+++ b/project1.html
@@ -154,9 +154,8 @@
        </figure>
         
       </div>
-      <div class="tile is-child box">
-        <h5>Random Fact:</h5>
-        <p>Did you know that the man who invented the pringles can was cremated and a portion of himself was buried in a pringles can.</p>
+      <div class="tile is-child box" id="joke">
+
       </div>
     </div>
     <div class="tile is-parent" id="recipe">
