Centered text for notification container 1st page

--- a/project1.html
+++ b/project1.html
@@ -16,17 +16,35 @@
 <body>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1st page styling ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <!-- To make this section disappear with Bulma use:   is-invisible     -->
-   <!-- <section class="hero is-fullheight" id="cocktails">
+   <section class="hero is-fullheight" id="cocktails">
     <header class="hero-body">
       <div class="is-overlay has-text-centered">
         <h1 class="glow">Casa Cocktails</h1>
       </div>
     </header>
-
-    <div class="notification">
-      <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID</h2>
-      <p class="one">Must be 21 to enter site</p>
-      <p class="one">Please Enter Date of Birth</p>
+<div class="container">
+  <div class="notification">
+    <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID PLEASE</h2>
+      <p class="one">Enter Date of Birth</p>
+      <div class="control">
+        <div class="select">
+          <select class="month">
+          </select>
+        </div>
+        <div class="select" >
+          <select id="day">Day</select>
+        </div>
+        <div class="select">
+          <select id="year">
+           
+          </select>
+        </div>
+      </div>
+    </div> -->
+  </div>
+</div>
+ <!--    <div class="tile">
+      
 
       <div class="control">
         <div class="select">
@@ -51,13 +69,13 @@
           </select>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="has-text-centered">
       <a href="https://www.freepik.com/free-photos-vectors/Background">Background vector created by freepik -
         www.freepik.com</a>
 
     </div>
-  </section> -->
+  </section>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2nd page user picks options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
    <!-- <section class="hero is-fullheight" id="image2">
     <header>
@@ -140,7 +158,7 @@
       </div>
     </section> -->
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~4th page Display drink recipes~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-  <section class="hero is-fullheight" id="image2">
+  <!-- <section class="hero is-fullheight" id="image2">
     <header>
       <div class=" has-text-centered">
         <h1 class="glow" id="cocktail">Cocktail Recipe</h1>
@@ -168,7 +186,7 @@
         <p>1. Put ice in shaker</p>
       </div>
     </div>
-  </div>
+  </div> -->
   <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
   <script src="script4E.js"></script>
 </body>
