--- a/project1.html
+++ b/project1.html
@@ -15,77 +15,38 @@
 
 <body>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1st page styling ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-  <!-- To make this section disappear with Bulma use:   is-invisible     -->
-   <section class="hero is-fullheight" id="cocktails">
+  <section class="hero is-fullheight cocktails" id="cocktails">
     <header class="hero-body">
       <div class="is-overlay has-text-centered">
         <h1 class="glow">Casa Cocktails</h1>
       </div>
     </header>
-<div class="container">
-  <div class="notification">
-    <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID PLEASE</h2>
-      <p class="one">Enter Date of Birth</p>
-      <div class="control">
-        <div class="select">
-          <select class="month">
-          </select>
+    <div class="container">
+      <div class="notification">
+        <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID PLEASE</h2>
+        <p class="one">Enter Date of Birth</p>
+        <div class="control">
+          <div class="select">
+            <select class="month">
+            </select>
+          </div> 
+          <div class="select">
+            <select class="day"></select>
+          </div>
+          <div class="select">
+            <select class="year"></select>
+          </div>
         </div>
-        <div class="select" >
-          <select id="day">Day</select>
-        </div>
-        <div class="select">
-          <select id="year">
-           
-          </select>
-        </div>
+        <button class="button">Enter Site</button>
       </div>
-    </div> -->
-  </div>
-</div>
- <!--    <div class="tile">
-      
-
-      <div class="control">
-        <div class="select">
-          <select>
-            <option>Month</option>
-            <option class="user-month">January</option>
-            <option>February</option>
-          </select>
-        </div>
-        <div class="select">
-          <select>
-            <option>Day</option>
-            <option class="user-day">01</option>
-            <option>02</option>
-          </select>
-        </div>
-        <div class="select">
-          <select>
-            <option>Year</option>
-            <option class="user-year">2019</option>
-            <option>2020</option>
-          </select>
-        </div>
-      </div>
-    </div> -->
-    <div class="has-text-centered">
-      <a href="https://www.freepik.com/free-photos-vectors/Background">Background vector created by freepik -
-        www.freepik.com</a>
-
-    </div>
-  </section>
-  <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2nd page user picks options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-   <!-- <section class="hero is-fullheight" id="image2">
+    </div> 
+    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2nd page user picks options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+    <section class="hero is-fullheight image2 is-hidden" id="image2">
     <header>
       <div class=" has-text-centered">
         <h1 class="glow" id="cocktail">What's on your shelf?</h1>
       </div>
     </header>
-    <div class="block">
-      </>
-    </div>
     <div class="block">
       <div class="columns">
         <div class="column is-3">
@@ -137,9 +98,9 @@
         </div>
       </div>
   </section>
-  <p class="has-text-centered">background by yingyang</p> -->
+  <p class="has-text-centered">background by yingyang</p>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~3rd page display drink options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-  <!--  <section class="hero is-fullheight" id="solid">
+    <section class="hero is-fullheight is-hidden" id="solid">
 
     <div class=" has-text-centered">
       <h1 class="glow" id="cocktail">Casa Cocktail Menu</h1>
@@ -156,9 +117,9 @@
         </ul>
 
       </div>
-    </section> -->
+    </section>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~4th page Display drink recipes~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-  <!-- <section class="hero is-fullheight" id="image2">
+    <section class="hero is-fullheight is-hidden" id="image2">
     <header>
       <div class=" has-text-centered">
         <h1 class="glow" id="cocktail">Cocktail Recipe</h1>
@@ -186,9 +147,10 @@
         <p>1. Put ice in shaker</p>
       </div>
     </div>
-  </div> -->
-  <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
-  <script src="script4E.js"></script>
+  </div>
+</section>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+    <script src="script4E.js"></script>
 </body>
 
 </html>
