Rendering page 2 while hiding page 1

--- a/project1.html
+++ b/project1.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1st page styling ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-  <section class="hero is-fullheight cocktails" id="cocktails">
+ <section class="hero is-fullheight cocktails" id="cocktails">
     <header class="hero-body">
       <div class="is-overlay has-text-centered">
         <h1 class="glow">Casa Cocktails</h1>
@@ -39,7 +39,8 @@
         </div>
         <button class="button">Enter Site</button>
       </div>
-    </div> 
+    </div>
+  </section>
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2nd page user picks options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
     <section class="hero is-fullheight image2 is-hidden" id="image2">
     <header>
@@ -100,7 +101,7 @@
   </section>
   <p class="has-text-centered">background by yingyang</p>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~3rd page display drink options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-    <section class="hero is-fullheight is-hidden" id="solid">
+    <section class="hero is-fullheight solid is-hidden" id="solid">
 
     <div class=" has-text-centered">
       <h1 class="glow" id="cocktail">Casa Cocktail Menu</h1>
@@ -119,7 +120,7 @@
       </div>
     </section>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~4th page Display drink recipes~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <section class="hero is-fullheight is-hidden" id="image2">
+    <!-- <section class="hero is-fullheight" id="image2">
     <header>
       <div class=" has-text-centered">
         <h1 class="glow" id="cocktail">Cocktail Recipe</h1>
@@ -148,7 +149,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
     <script src="script4E.js"></script>
 </body>
