--- a/project1.html
+++ b/project1.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1st page styling ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
- <section class="hero is-fullheight cocktails" id="cocktails">
+ <section class="hero is-fullheight cocktails is-hidden" id="cocktails">
     <header class="hero-body">
       <div class="is-overlay has-text-centered">
         <h1 class="glow">Casa Cocktails</h1>
@@ -23,7 +23,7 @@
     </header>
     <div class="container">
       <div class="notification">
-        <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID PLEASE</h2>
+        <!-- <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID PLEASE</h2>
         <p class="one">Enter Date of Birth</p>
         <div class="control">
           <div class="select">
@@ -36,18 +36,23 @@
           <div class="select">
             <select class="year"></select>
           </div>
+        </div> -->
+        <div>
+        <button class="button">ENTER SITE</button>
         </div>
-        <button class="button">Enter Site</button>
       </div>
     </div>
   </section>
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2nd page user picks options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-    <section class="hero is-fullheight image2 is-hidden" id="image2">
+    <section class="hero is-fullheight image2" id="image2">
     <header>
       <div class=" has-text-centered">
         <h1 class="glow" id="cocktail">What's on your shelf?</h1>
       </div>
     </header>
+    <div>
+    <button class="button" id="user-submit">SUBMIT</button>
+  </div>
     <div class="block">
       <div class="columns">
         <div class="column is-3">
@@ -98,8 +103,8 @@
           </div>
         </div>
       </div>
-  </section>
   <p class="has-text-centered">background by yingyang</p>
+  </section>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~3rd page display drink options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
     <section class="hero is-fullheight solid is-hidden" id="solid">
 
@@ -120,7 +125,7 @@
       </div>
     </section>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~4th page Display drink recipes~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <!-- <section class="hero is-fullheight" id="image2">
+    <section class="hero is-fullheight page-four is-hidden" id="image2">
     <header>
       <div class=" has-text-centered">
         <h1 class="glow" id="cocktail">Cocktail Recipe</h1>
@@ -149,7 +154,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
     <script src="script4E.js"></script>
 </body>
