--- a/project1.html
+++ b/project1.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
     <link rel="stylesheet" href="style.css" />
+    <script src="moment.js"></script>
+    <script> moment().format(); </script>
+
 </head>
 
 <body>
@@ -22,7 +25,7 @@
         </header>
         <div class="container">
             <div class="notification">
-                <!-- <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID PLEASE</h2>
+                 <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID PLEASE</h2>
         <p class="one">Enter Date of Birth</p>
         <div class="control">
           <div class="select">
@@ -35,9 +38,9 @@
           <div class="select">
             <select class="year"></select>
           </div>
-        </div> -->
+        </div> 
                 <div>
-                    <button class="button">ENTER SITE</button>
+                    <button type="submit" class="button">ENTER </button>
                 </div>
             </div>
         </div>
