fix background and main title's css style

--- a/project1.html
+++ b/project1.html
@@ -20,13 +20,13 @@
     <section class="hero is-fullheight cocktails" id="cocktails">
         <header class="hero-body">
             <div class="is-overlay has-text-centered">
-                <h1 class="glow">Casa Cocktails</h1>
+                <h1 class="glow" id="mainTitle">Casa Cocktails</h1>
             </div>
         </header>
         <div class="container">
-            <div class="notification">
-                 <h2 class="has-text-centered" style="font-weight: bolder;">NEED TO SEE SOME ID PLEASE</h2>
-        <p class="one">Enter Date of Birth</p>
+            <div class="notification glow">
+                 <h2 class="has-text-centered" style="font-weight: bolder;">You must be 21 or over to enter this site</h2>
+        <p class="one">Enter Your Date of Birth</p>
         <div class="control">
           <div class="select">
             <select class="month">
@@ -39,8 +39,8 @@
             <select class="year"></select>
           </div>
         </div> 
-                <div>
-                    <button type="submit" class="button">ENTER </button>
+                <div class="has-text-centered">
+                    <button type="submit" class="button" id="enterButton">ENTER </button>
                 </div>
             </div>
         </div>
