--- a/project1.html
+++ b/project1.html
@@ -25,7 +25,7 @@
         </header>
         <div class="container">
             <div class="notification glow">
-                 <h2 class="has-text-centered" style="font-weight: bolder;">You must be 21 or over to enter this site</h2>
+                 <h2 class="has-text-centered" style="font-weight: bolder;">YOU MUST BE AT LEAST 21 YEARS OF AGE TO ENTER</h2>
         <p class="one">Enter Your Date of Birth</p>
         <div class="control">
           <div class="select">
